--- a/Assignments/HTMLRecap/index.html
+++ b/Assignments/HTMLRecap/index.html
@@ -6,7 +6,8 @@
 <body>
     <h1>Iframes</h1>
     <p>
-        Here's a funny video i found of a cat earlier!
+        Here's a funny video i found of a cat earlier! Sorry it doesnt work on here, i'll just link it! 
+        <a href= "https://www.youtube.com/watch?v=mNvYcgICPCs">Cat Video </a>
     </p>
     <iframe src="https://www.youtube.com/watch?v=mNvYcgICPCs"
         frameborder="0"
@@ -55,7 +56,43 @@
             <p>Honestly my brother is kind of a dog person, he's kinda weird but didn't like it as much :(</p>
         </div>
 
-        
+        <h1>Name a few fun facts about yourself!</h1>
+    <div>
+        <p>Do you have any pets?</p>
+        <input type="question" />
+    </div>
+    <div>
+        <p>Do you have siblings?</p>
+        <input type="question" />
+    </div>
+    <div>
+        <p>What's your hidden talent?</p>
+        <input type="question" />
+    </div>
+    <div>
+        <p>How many years have you done software development?</p>
+        <input type="question" />
+    </div>
+    <div>
+        <p>what's your favorite color?</p>    
+        <input type="question" />
+    </div>
+
+
+
+    <nav>
+        <h1>Where can you find me for more greatness?</h1>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/anthony-benedetti-5a712a191/">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://github.com/anthonybenedetti">GitHub</a>
+            </li>
+            
+        </ul>
+    </nav>
+
 
 </body>
 </html>
